--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openai==0.25.0
 openpyxl==3.0.10
 pandas==1.5.2
 pandas-stubs==1.5.2.221213
+psycopg2-binary==2.9.5
 pydantic==1.10.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
@@ -20,10 +21,11 @@ PyYAML==6.0
 requests==2.28.1
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==1.4.45
 starlette==0.22.0
 tqdm==4.64.1
 types-pytz==2022.7.0.0
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 urllib3==1.26.13
 uvicorn==0.20.0
 uvloop==0.17.0
