--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 anyio==3.6.2
+attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 et-xmlfile==1.1.0
+exceptiongroup==1.1.0
 fastapi==0.88.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+iniconfig==1.1.1
 numpy==1.24.0
 openai==0.25.0
 openpyxl==3.0.10
+packaging==22.0
 pandas==1.5.2
 pandas-stubs==1.5.2.221213
+pluggy==1.0.0
 psycopg2-binary==2.9.5
 pydantic==1.10.2
+pytest==7.2.0
+pytest-mock==3.10.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.7
@@ -23,6 +30,7 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.45
 starlette==0.22.0
+tomli==2.0.1
 tqdm==4.64.1
 types-pytz==2022.7.0.0
 typing_extensions==4.4.0
