add alembic for versioning db schema and patch event schema

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+alembic==1.9.1
 anyio==3.6.2
+astroid==2.13.2
 attrs==22.2.0
+black==22.12.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
+dill==0.3.6
 et-xmlfile==1.1.0
 exceptiongroup==1.1.0
 fastapi==0.88.0
@@ -10,15 +14,24 @@ h11==0.14.0
 httptools==0.5.0
 idna==3.4
 iniconfig==1.1.1
+isort==5.11.4
+lazy-object-proxy==1.9.0
+Mako==1.2.4
+MarkupSafe==2.1.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
 numpy==1.24.0
 openai==0.25.0
 openpyxl==3.0.10
 packaging==22.0
 pandas==1.5.2
 pandas-stubs==1.5.2.221213
+pathspec==0.10.3
+platformdirs==2.6.2
 pluggy==1.0.0
 psycopg2-binary==2.9.5
 pydantic==1.10.2
+pylint==2.15.10
 pytest==7.2.0
 pytest-mock==3.10.0
 python-dateutil==2.8.2
@@ -31,6 +44,7 @@ sniffio==1.3.0
 SQLAlchemy==1.4.45
 starlette==0.22.0
 tomli==2.0.1
+tomlkit==0.11.6
 tqdm==4.64.1
 types-pytz==2022.7.0.0
 typing_extensions==4.4.0
@@ -39,3 +53,4 @@ uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
+wrapt==1.14.1
