--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==1.9.1
 anyio==3.6.2
 astroid==2.13.2
 attrs==22.2.0
-black==22.12.0
+black==23.1.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
@@ -42,11 +42,12 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.45
 starlette==0.22.0
+tenacity==8.2.1
 tomli==2.0.1
 tomlkit==0.11.6
 tqdm==4.64.1
 types-pytz==2022.7.0.0
-typing_extensions==4.4.0
+typing-extensions==4.4.0
 urllib3==1.26.13
 uvicorn==0.20.0
 uvloop==0.17.0
