--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 alembic==1.9.1
 anyio==3.6.2
 astroid==2.13.2
+async-timeout==4.0.2
 attrs==22.2.0
 black==23.1.0
 certifi==2022.12.7
@@ -10,6 +13,7 @@ dill==0.3.6
 et-xmlfile==1.1.0
 exceptiongroup==1.1.0
 fastapi==0.88.0
+frozenlist==1.3.3
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
@@ -19,9 +23,10 @@ lazy-object-proxy==1.9.0
 Mako==1.2.4
 MarkupSafe==2.1.1
 mccabe==0.7.0
+multidict==6.0.4
 mypy-extensions==0.4.3
 numpy==1.24.0
-openai==0.25.0
+openai==0.27.0
 openpyxl==3.0.10
 packaging==22.0
 pandas==1.5.2
@@ -54,3 +59,4 @@ uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
 wrapt==1.14.1
+yarl==1.8.2
